# fly-old

./: .gitignore  CMakeLists.txt  Makefile  README.md  aes.go  aes_test.go  build.sh  cache.go  coder.go  coder_test.go  hmac.go  hmac_test.go  logger.go  logger_test.go  main.go  render.go  render_test.go  run.sh  serial.go  serial_test.go  sitemap.go  task.go
backend/: .gitignore  main.go
bak/: 20170309152507_create-shop.sql
bak/erp/: seed.go  shell.go
bak/shop/: models.go  shell.go
conf/: app.conf
conf/locales/: zh-Hans.ini
demo/: .gitignore  run.sh
demo/locales/: zh-Hans.ini
engines/admin/: db.go  engine.go  shell.go  ssl.go  tpl.go
engines/auth/: db.go  (+25 more)
frontend/: index.html  package.json
i18n/: i18n.go  i18n_test.go
inject/: inject.go  inject_test.go
locales/: zh-Hans.ini
migrate/: dialect.go  migrate_test.go  migration.go  store.go
mux/: mux.go  mux_test.go  route.go
orm/: dialect.go  i18n.go  orm_test.go
redis/: cache.go  cache_test.go  queue.go  queue_test.go
routers/: router.go
src/: Application.cxx  Application.h  Configuration.cxx  Configuration.h  RequestHandler.cxx  RequestHandler.h  RequestHandlerFactory.cxx  RequestHandlerFactory.h  main.cxx
templates/: ops_mail.html  ops_vpn.html
themes/: NODE.md
toml/: config.go  toml_test.go
web/: actions.go  app.go  config.go  context.go  dropdown.go  engine.go  handlers.go  i18n.go  layout.go  logger.go  main.go  models.go  mux.go  pagination.go  rabbitmq.go  render.go  router.go  run.go  security.go  security_test.go  setting.go  uploader.go  utils.go  validate.go  worker.go
(+366 files in other folders)
